correcting the fixed hegiht on mobile device now its responsive design mobile first with material ui

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   justify-content: space-between;
   width: 100vw;
   margin-top: 0;
-  position: fixed;
+  /* position: fixed; */
   top: 0px;
 }
 .HeaderBanner {
@@ -77,4 +77,7 @@
 }
 .padd-text {
   padding: 0px 7px 0px 7px;
+}
+h1 {
+  font-size: calc(1.3rem + 0.6vw);
 }
